GL/Projet_GL/src/test/deca/codegen/valid/optim/constantfolding/test_fold_5.deca
// Description :
// test de la constant_folding
//
// Resultats :
// LOAD #45, R2 

{
  int x;
  x = 5*9;
  println(x);
}
